fixed z-index issue with nav animation

--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,7 @@ body {
   font-size: 4.8rem;
   line-height: 1.9;
   opacity: 0;
-  z-index: 3;
+  z-index: -1;
 }
 .nav .links {
   display: flex;
