--- a/less/home.less
+++ b/less/home.less
@@ -7,7 +7,7 @@
     font-size: 4.8rem;
     line-height: 1.9;
     opacity: 0;
-    z-index: 3;
+    z-index: -1;
 
     .links {
         display: flex;
